Halo, Line and Path are not being rendered by Eevee nor Cycles with emitter particles #80197

Closed
opened 2020-08-28 17:16:14 +02:00 by Tobias Lijsen · 17 comments

System Information
Operating system: win7
Graphics card: geforce 970

Blender Version
Broken: 2.90 beta 25.8.2020
Worked: 2.79

Short description of error
children particles do not show up
even if i turn them to 1000 children... noting happens
looks like they dont even get calculated
in hair mode it works - but in emission mode it dont

Exact steps for others to reproduce the error
make default particle system on default cube
go to children an turn it on

**System Information** Operating system: win7 Graphics card: geforce 970 **Blender Version** Broken: 2.90 beta 25.8.2020 Worked: 2.79 **Short description of error** children particles do not show up even if i turn them to 1000 children... noting happens looks like they dont even get calculated in hair mode it works - but in emission mode it dont **Exact steps for others to reproduce the error** make default particle system on default cube go to children an turn it on
Author

Added subscriber: @blenderhilfe

Added subscriber: @blenderhilfe

#97407 was marked as duplicate of this issue

#97407 was marked as duplicate of this issue

#96231 was marked as duplicate of this issue

#96231 was marked as duplicate of this issue

#83924 was marked as duplicate of this issue

#83924 was marked as duplicate of this issue

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author

this is important for blender 2.90 release, we all need children particles working please :)
this needs to be high prio!

this is important for blender 2.90 release, we all need children particles working please :) this needs to be high prio!
Member

Added subscribers: @JacquesLucke, @brecht, @lichtwerk

Added subscribers: @JacquesLucke, @brecht, @lichtwerk
Member

They are working with Object or Collection as render type, see:

#80197.blend

It is just that Halo, Line and Path are not being drawn/rendered by Eevee nor Cycles with emitter particles.

@brecht, @JacquesLucke: there was already the discussion in #65542 (Particle trails not working) about removing these (and this was more or less approved) should we just make a TODO task for this?

They are working with `Object` or `Collection` as render type, see: [#80197.blend](https://archive.blender.org/developer/F8825469/T80197.blend) It is just that `Halo`, `Line` and `Path` are not being drawn/rendered by Eevee nor Cycles with emitter particles. @brecht, @JacquesLucke: there was already the discussion in #65542 (Particle trails not working) about removing these (and this was more or less approved) should we just make a TODO task for this?

This could be marked as a known issue.

But really solving this should be quite simple, so maybe you are @JacquesLucke can just make a patch to remove these options?

This could be marked as a known issue. But really solving this should be quite simple, so maybe you are @JacquesLucke can just make a patch to remove these options?
Philipp Oeser changed title from 290 particle children not working to Halo, Line and Path are not being rendered by Eevee nor Cycles with emitter particles 2021-01-06 13:17:43 +01:00
Member

Added subscribers: @TheRealGrimshaw, @rjg

Added subscribers: @TheRealGrimshaw, @rjg
Member

Added subscriber: @timpronin

Added subscriber: @timpronin
Member

Added subscribers: @maylog, @PratikPB2123

Added subscribers: @maylog, @PratikPB2123
Philipp Oeser removed the
Interest
Nodes & Physics
label 2023-02-10 08:46:34 +01:00

3.5 was realesed, still not working

3.5 was realesed, still not working
Member

This wont be rendering these types (also not in the future), better use geometry nodes for this (or set render_type to object and make appropriate objects), sorry.

This could be marked as a known issue.

But really solving this should be quite simple, so maybe you are @JacquesLucke can just make a patch to remove these options?

Will put on my desk to remove for good...

This wont be rendering these types (also not in the future), better use geometry nodes for this (or set render_type to object and make appropriate objects), sorry. > This could be marked as a known issue. > > But really solving this should be quite simple, so maybe you are @JacquesLucke can just make a patch to remove these options? Will put on my desk to remove for good...
Philipp Oeser self-assigned this 2023-05-24 14:17:24 +02:00

This wont be rendering these types (also not in the future), better use geometry nodes for this (or set render_type to object and make appropriate objects), sorry.

This could be marked as a known issue.

But really solving this should be quite simple, so maybe you are @JacquesLucke can just make a patch to remove these options?

Will put on my desk to remove for good...

I would like there was also an option to render particles just as "sprites" (single polygon always oriented to camera) without any geometry nodes magic etc.
Maybe it should be added like an "polygon" render option in particle system, simple and obvious.

Also it will be cool to have an option to render particles trajectories like curves, but it looks more complicated to implement

> This wont be rendering these types (also not in the future), better use geometry nodes for this (or set render_type to object and make appropriate objects), sorry. > > > > This could be marked as a known issue. > > > > But really solving this should be quite simple, so maybe you are @JacquesLucke can just make a patch to remove these options? > > Will put on my desk to remove for good... I would like there was also an option to render particles just as "sprites" (_single polygon always oriented to camera_) without any geometry nodes magic etc. Maybe it should be added like an "polygon" render option in particle system, _simple and obvious_. Also it will be cool to have an option to render particles trajectories like curves, but it looks more complicated to implement
Member

These have been removed now in fbd2bd8154 (so will be gone in 4.0).

I would like there was also an option to render particles just as "sprites" (single polygon always oriented to camera) without any geometry nodes magic etc.
Maybe it should be added like an "polygon" render option in particle system, simple and obvious.

Also it will be cool to have an option to render particles trajectories like curves, but it looks more complicated to implement

Would really suggest using geometry nodes now, have a look around, I would assume there are already premade nodegroups out in the wild that achieve what you are after. Trails for example can be done like this https://www.youtube.com/watch?v=gOK4S5DWgUE

So after all this time, will close this report.

These have been removed now in fbd2bd81548d2a330858ab504b1bd763238e356b (so will be gone in 4.0). > I would like there was also an option to render particles just as "sprites" (_single polygon always oriented to camera_) without any geometry nodes magic etc. > Maybe it should be added like an "polygon" render option in particle system, _simple and obvious_. > > Also it will be cool to have an option to render particles trajectories like curves, but it looks more complicated to implement Would really suggest using geometry nodes now, have a look around, I would assume there are already premade nodegroups out in the wild that achieve what you are after. Trails for example can be done like this https://www.youtube.com/watch?v=gOK4S5DWgUE So after all this time, will close this report.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-05-30 20:53:19 +02:00

I think that will continue to disturb people.

What users see in Viewport is still absent, by default, of a render.
Workbench and Cycles are able to render geometry nodes points.
That would make sense to have a visualisation to render old particles as geometry nodes points with those engines, until there is a bundle of nodegroups replacing old particles.

I think that will continue to disturb people. What users see in Viewport is still absent, by default, of a render. Workbench and Cycles are able to render geometry nodes points. That would make sense to have a visualisation to render old particles as geometry nodes points with those engines, until there is a bundle of nodegroups replacing old particles.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80197
No description provided.