source/blender/blenkernel/intern/particle_system.c
@@ -4639,7 +4639,7 @@ void psys_changed_type(Object *ob, ParticleSystem *psys)
   }
 
   if (part->type == PART_HAIR) {
-    if (ELEM(part->ren_as, PART_DRAW_NOT, PART_DRAW_PATH, PART_DRAW_OB, PART_DRAW_GR) == 0) {
+    if (ELEM(part->ren_as, PART_DRAW_PATH, PART_DRAW_OB, PART_DRAW_GR) == 0) {
       part->ren_as = PART_DRAW_PATH;
     }
 
@@ -4661,6 +4661,11 @@ void psys_changed_type(Object *ob, ParticleSystem *psys)
 
     CLAMP(part->path_start, 0.0f, MAX2(100.0f, part->end + part->lifetime));
     CLAMP(part->path_end, 0.0f, MAX2(100.0f, part->end + part->lifetime));
+
+    if (ELEM(part->ren_as, part->draw_as, PART_DRAW_PATH)) {
+      part->ren_as = PART_DRAW_NOT;
+      part->draw_as = PART_DRAW_DOT;
+    }
   }
 
   psys_reset(psys, PSYS_RESET_ALL);
