source/blender/makesdna/DNA_particle_defaults.h
@@ -17,8 +17,8 @@
   { \
     .type = PART_EMITTER, \
     .distr = PART_DISTR_JIT, \
-    .draw_as = PART_DRAW_REND, \
-    .ren_as = PART_DRAW_HALO, \
+    .draw_as = PART_DRAW_DOT, \
+    .ren_as = PART_DRAW_NOT, \
     .bb_uv_split = 1, \
     .flag = PART_EDISTR | PART_TRAND | PART_HIDE_ADVANCED_HAIR, \
  \
