source/blender/makesdna/DNA_particle_types.h
@@ -560,12 +560,12 @@ typedef enum eParticleShapeFlag {
 /* #ParticleSettings.ren_as */
 #define PART_DRAW_NOT 0
 #define PART_DRAW_DOT 1
-#define PART_DRAW_HALO 1
+#define PART_DRAW_HALO 1 /* deprecated */
 #define PART_DRAW_CIRC 2
 #define PART_DRAW_CROSS 3
 #define PART_DRAW_AXIS 4
-#define PART_DRAW_LINE 5
-#define PART_DRAW_PATH 6
+#define PART_DRAW_LINE 5 /* deprecated */
+#define PART_DRAW_PATH 6 /* only for hair */
 #define PART_DRAW_OB 7
 #define PART_DRAW_GR 8
 #define PART_DRAW_BB 9 /* deprecated */
